@@ -5,6 +5,7 @@ fixed bugs:
 - fixed bug in heur_subnlp when initialized starting values of a fixed variable in the NLP of the subscip
 - fixed bug in SCIPcopyConss (valid was not initialized to TRUE)
 - fixed bug in reader_mps: indicator constraints do not output the slack variables anymore
+- fixed bug in heur_undercover: removed option globalbounds, since we are not allowed to relax bounds at a probing node
 
 parameters:
 - added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
